tests/negative/test_expr_eval_div_by_zero_floating.orb
fnc main () () {
    sym (x (/ 1.0 0.0));
};